src/styles/viewdogs.module.scss
@use "sass:math";

$_slide-count: 10;
$_rotationTime: 0.25s;

$_white: #FFFFFF;
$_darkest_blue: #01060B;
$_dark_blue: #0B4283;
$_light_blue: #74A6E1;
$_blue: #3072C1;
$_light_green: #6AE1C0;
$_green: #23C195;

.dogview {
	position: relative;

	min-width: 16rem;
	max-width: 40rem;
}

.wheelcontainer {
	position: relative;

	$width: 75%;
	width: $width;
	padding-bottom: $width;

	left: (100% - $width) / 2;
}

$_slide-radius: 25%;
$_wheel-padding: $_slide-radius - 12%;

.wheeloutline {
	position: absolute;

	$size: 100% - ($_wheel-padding * 2);
	$borderSize: 1px;

	$realSize: calc(#{$size} - #{$borderSize * 2});

	width: $realSize;
	height: $realSize;

	padding: $_wheel-padding;

	background-color: $_white;
	border-radius: 100%;
	border-width: 1px;
	border-style: solid;
	border-color: $_dark_blue;
}

@mixin _transformSlide($index, $count) {
	$step: 360deg / $count;
	$degrees: -$step * ($index);

	$x: (math.cos($degrees) * 50%) + 50%;
	$y: (math.sin($degrees) * 50%) + 50%;

	left: $x;
	top:  $y;
	transform: translate(-50%, -50%) rotate($degrees + 90deg);
}

@mixin _animatedTransformSlide($index, $count) {
	$animation-name: unique-id();

	@keyframes #{$animation-name} {
		0% {
			@include _transformSlide($index, $count);
		}
		25% {
			@include _transformSlide($index - 0.25, $count);
		}
		50% {
			@include _transformSlide($index - 0.5, $count);
		}
		75% {
			@include _transformSlide($index - 0.75, $count);
		}
		100% {
			@include _transformSlide($index - 1, $count);
		}
	}

	animation-name: $animation-name;
	animation-duration: $_rotationTime;
	animation-timing-function: linear;
}

.wheel {
	width: 100%;
	height: 100%;

	position: relative;

	@for $i from 1 through $_slide-count {
		> *:nth-of-type(#{$i}) .wheelslide {
			@include _transformSlide($i, $_slide-count);
		}
	}
}

.slidemove {
	@for $i from 1 through $_slide-count {
		> *:nth-of-type(#{$i}) .wheelslide {
			@include _animatedTransformSlide($i, $_slide-count);
		}
	}
}

.wheelslide {
	position: absolute;

	width: $_slide-radius;
	height: $_slide-radius;

	background-color: $_darkest_blue;
	border-radius: 25%;
	overflow: hidden;

	img {
		width: 100%;
		height: 100%;
		object-fit: contain;
	}

	&:hover {
		width: $_slide-radius + 2%;
		height: $_slide-radius + 2%;
	}
}

$_view-box-height: 60%;
$_view-box-border-radius: 2rem;

.viewbox {
	$borderWidth: 0.75rem;

	//padding: $borderWidth;

	position: absolute;
	width: calc(100% - #{$borderWidth * 2});
	min-height: calc(#{$_view-box-height} - #{$borderWidth * 2});
	top: 100% - $_view-box-height;

	background-color: $_white;
	border-color: $_light_blue;
	border-style: outset;
	border-width: $borderWidth;
	border-radius: $_view-box-border-radius;
}

.viewboxbutton {
	$borderWidth: 0.5rem;
	padding: $borderWidth;

	$borderSize: $borderWidth * 2;

	$size: 16%;
	$realSize: calc(#{$size} + #{$borderSize});

	max-width: $realSize;

	position: absolute;
	right: 0%;
	top: 100% - $_view-box-height - $size;

	background-color: $_light_green;
	border-color: $_green;
	border-style: outset;
	border-width: $borderWidth;
	border-radius: $_view-box-border-radius;

	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;

	font-size: 1.25rem;

	cursor: pointer;
}

.viewboxbutton:active {
	border-style: inset;
}

